create a conflict for remote

--- a/index.html
+++ b/index.html
@@ -2,3 +2,7 @@ edited in github
 edited in desktop 19:19
 edited in dekstop in alkas branch
 edited in github 19:16
+________
+added in desktop 19:23
+
+
